--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <aspectj.version>1.9.5</aspectj.version>
         <allure.version>2.13.2</allure.version>
         <selenium.version>3.141.59</selenium.version>
-        <selenide.version>5.11.1</selenide.version>
+        <selenide.version>5.24.0</selenide.version>
         <log4j.version>2.13.3</log4j.version>
         <io.rest-assured.version>4.3.2</io.rest-assured.version>
         <fasterxml.jackson.version>2.10.3</fasterxml.jackson.version>
@@ -174,6 +174,13 @@
             <version>${assertj.version}</version>
             <scope>test</scope>
         </dependency>
+
+<!--        Web driver manager-->
+<!--        <dependency>-->
+<!--            <groupId>io.github.bonigarcia</groupId>-->
+<!--            <artifactId>webdrivermanager</artifactId>-->
+<!--            <version>5.0.3</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
